Prevent reload page by pull down on mobile version.

--- a/app.css
+++ b/app.css
@@ -4,6 +4,7 @@ body{
 	font-size:15px;
 	font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial;
 	overflow:hidden;
+	overscroll-behavior:contain;
 }
 body.loaded{
 	overflow-y:scroll;
